# ChangeLog for media-sound/qjackctl
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/qjackctl/ChangeLog,v 1.43 2007/07/03 11:55:54 flameeyes Exp $

*qjackctl-0.2.23 (03 Jul 2007)

  03 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  -qjackctl-0.2.20.ebuild, -qjackctl-0.2.21.ebuild, -qjackctl-0.2.22.ebuild,
  +qjackctl-0.2.23.ebuild:
  Version bump (thanks to upstream who addressed some of the issues found on
  previous ebuild); also remove old versions, .23 is the target stable for
  next month.

  02 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Hand to newly-born proaudio herd.

*qjackctl-0.2.22 (29 Jun 2007)

  29 Jun 2007; Diego Pettenò <flameeyes@gentoo.org>
  +qjackctl-0.2.22.ebuild:
  Version bump. Add alsa and debug USE flags. When alsa USE flag is enabled,
  check for the midi flag on alsa-lib or it will not build. Install a desktop
  file and move the icon in the right place. Install the documentation.

*qjackctl-0.2.21 (08 Oct 2006)

  08 Oct 2006; Eldad Zack <eldad@gentoo.org> +qjackctl-0.2.21.ebuild:
  Version bump

  25 Jul 2006; Eldad Zack <eldad@gentoo.org> -qjackctl-0.2.17.ebuild:
  Punting 0.2.17, see bug #133639.

  25 Jul 2006; Joshua Jackson <tsunam@gentoo.org> qjackctl-0.2.19a.ebuild:
  Stable x86; bug #136469

  26 Jun 2006; Simon Stelling <blubb@gentoo.org> qjackctl-0.2.19a.ebuild:
  stable on amd64

  15 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  qjackctl-0.2.19a.ebuild:
  ppc stable, bug #136469

  13 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  qjackctl-0.2.19a.ebuild:
  Stable on sparc wrt #136469

*qjackctl-0.2.20 (11 Jun 2006)

  11 Jun 2006; Eldad Zack <eldad@gentoo.org> +qjackctl-0.2.20.ebuild:
  Version bump

  06 May 2006; Eldad Zack <eldad@gentoo.org> -qjackctl-0.2.8.ebuild,
  -qjackctl-0.2.9.ebuild, -qjackctl-0.2.11.ebuild, -qjackctl-0.2.13.ebuild,
  -qjackctl-0.2.14.ebuild, -qjackctl-0.2.15.ebuild:
  Purge old ebuilds
