@@ -3,6 +3,7 @@ Hash: SHA1
 
 DIST qjackctl-0.2.19a.tar.gz 250456 RMD160 b5a20e751c0069f31b32ba5566a4416eae06728d SHA1 184efce1fe25308bfd420cbdf51c2dc3399fbf4e SHA256 68d2b3c3720bbda58281d048e5f6f42e09d5502debbe16cbb9df99b904bcb4f7
 DIST qjackctl-0.2.23.tar.gz 260545 RMD160 a975e51ec6d95abaff33ea9e32430e30d8d31a46 SHA1 e44b7487ab1e436e4c1bdf909e8e96d338c059c3 SHA256 f6781aba529cd4acfa1e4278f6c65b91336684b79232364cb43aa42fcba868bc
+DIST qjackctl-0.3.1a.tar.gz 253846 RMD160 019547527d63eae46d1196d69e918795d5ed0598 SHA1 b65a1117797662170a97af11b2f1d170f62b3e9f SHA256 4c15e7133562fd5762e52b6c2a4ae43bac749f0345d63f61343c4a90504aa9f4
 EBUILD qjackctl-0.2.19a.ebuild 672 RMD160 44028b2c178b00ba75fad1b2348145aab84b026d SHA1 a18753d940a2899392d77bd8992597915dd7627e SHA256 198c12cd7c7a3d43af29eb8b6e6f84d509ec9ec717923e530d767f194810f3f4
 MD5 d1fb0bce866e67c46452319ce13950f6 qjackctl-0.2.19a.ebuild 672
 RMD160 44028b2c178b00ba75fad1b2348145aab84b026d qjackctl-0.2.19a.ebuild 672
@@ -11,10 +12,14 @@ EBUILD qjackctl-0.2.23.ebuild 1364 RMD160 5a90408e109fdaf1b76a4d3947166a06ca8d82
 MD5 ded02472f32b31af6c483636cee84cee qjackctl-0.2.23.ebuild 1364
 RMD160 5a90408e109fdaf1b76a4d3947166a06ca8d82ab qjackctl-0.2.23.ebuild 1364
 SHA256 254975bc45a5a6464647eeb4db1f7dad882aa7afe3319c8b769e7a35d6cc1a43 qjackctl-0.2.23.ebuild 1364
-MISC ChangeLog 5896 RMD160 2260a2377274ca33bb3f346b53eef9fd07202ec1 SHA1 d5e79045ba8ce84831f2e7a4331c18ef8ab14aa5 SHA256 4d04a1d12e7b74b3d37397c986e4ff102fb49b8c6ff6f0511d2b8fa2f180da36
-MD5 0f8cec0d03323a2f0df60c17606d88ac ChangeLog 5896
-RMD160 2260a2377274ca33bb3f346b53eef9fd07202ec1 ChangeLog 5896
-SHA256 4d04a1d12e7b74b3d37397c986e4ff102fb49b8c6ff6f0511d2b8fa2f180da36 ChangeLog 5896
+EBUILD qjackctl-0.3.1a.ebuild 1363 RMD160 c9da59052a459a6b39d5759cf6edf4ec7e4fb6e8 SHA1 93fe1085b0ad3719370608a1260d64c9fe56dfc2 SHA256 b6961b942ad3aa73dd8c5fb220469323d0bfd7231e0f3f7ff694e617ab1e933d
+MD5 b323bde7a937be80721194f44865c50a qjackctl-0.3.1a.ebuild 1363
+RMD160 c9da59052a459a6b39d5759cf6edf4ec7e4fb6e8 qjackctl-0.3.1a.ebuild 1363
+SHA256 b6961b942ad3aa73dd8c5fb220469323d0bfd7231e0f3f7ff694e617ab1e933d qjackctl-0.3.1a.ebuild 1363
+MISC ChangeLog 6090 RMD160 c1edc61af69a16e95c082fc4b40dbbc91a3ba732 SHA1 1ac50f1456531e4dc057e6d82d472596f70b2d67 SHA256 18e2da49db4a79c23a5b2feff778df83ff307078458624479fc0ff3088694296
+MD5 8bbd51137e1ed67af7399320a91ec8e5 ChangeLog 6090
+RMD160 c1edc61af69a16e95c082fc4b40dbbc91a3ba732 ChangeLog 6090
+SHA256 18e2da49db4a79c23a5b2feff778df83ff307078458624479fc0ff3088694296 ChangeLog 6090
 MISC metadata.xml 161 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 SHA1 90201ddb830142147774cc7b7b5178fbd0a9af0c SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e
 MD5 f62f5a9cf5fe86389cf2bf4d85244ef5 metadata.xml 161
 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 metadata.xml 161
@@ -25,10 +30,13 @@ SHA256 420f195b83d5249524e13c3a269ce3dfc344b1d35451caa0ba077c21c7deccaf files/di
 MD5 034e44ab944ab16a7f12d3dd7043e55a files/digest-qjackctl-0.2.23 247
 RMD160 d56e32a7b2f03e426347d618524df7d57785b53d files/digest-qjackctl-0.2.23 247
 SHA256 bf3a14801e2b5e2b45d350e942c37f5ef9aae6f9bcd4a5eae30ead88310b3869 files/digest-qjackctl-0.2.23 247
+MD5 5176202efddb5d29da15c9a53a73691a files/digest-qjackctl-0.3.1a 247
+RMD160 e4542ee47e19824fb970773478708c5adf0e5c97 files/digest-qjackctl-0.3.1a 247
+SHA256 0bd7bad924cea32917eec9eead4fb841c82c143702391478e1135f2988bf6592 files/digest-qjackctl-0.3.1a 247
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.4 (GNU/Linux)
+Version: GnuPG v2.0.5 (GNU/Linux)
 
-iD8DBQFGijmtAiZjviIA2XgRAqqZAKDVkF4m7FVNqzur+LRikY01D7cXKwCbBX1I
-tJVP20Wn68pYvn05xoDkGlM=
-=XH00
+iD8DBQFGqjB6AiZjviIA2XgRAjijAJ433qtzq4x0xndvga3KQ5bk1NVXCgCfeKis
+4lTSsf71Ubn5iEQmhWAAmOI=
+=MkbX
 -----END PGP SIGNATURE-----
