@@ -1,0 +1,3 @@
+MD5 070135c2c65c27f8a5ab83710225120e qjackctl-0.3.1a.tar.gz 253846
+RMD160 019547527d63eae46d1196d69e918795d5ed0598 qjackctl-0.3.1a.tar.gz 253846
+SHA256 4c15e7133562fd5762e52b6c2a4ae43bac749f0345d63f61343c4a90504aa9f4 qjackctl-0.3.1a.tar.gz 253846
